@@ -5,6 +5,10 @@
 # Distributed under the GPL v2
 # $Id$
 
+  13 Oct 2012; Robin H. Johnson <robbat2@gentoo.org> gen_initramfs.sh:
+  Bug #414581: ensure built-in initramfs compress config options are set to
+  avoid silentoldconfig bailing out.
+
   13 Oct 2012; Łukasz Stelmach <stlman@poczta.fm> gen_cmdline.sh,
   gen_compile.sh, gen_configkernel.sh, gen_determineargs.sh, gen_funcs.sh,
   genkernel:
